--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'io.qameta.allure:allure-junit5:2.25.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
     testImplementation 'org.assertj:assertj-core:3.25.3'
+    implementation 'commons-io:commons-io:2.16.0'
 }
 
 test {
