--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.25.3'
     implementation 'commons-io:commons-io:2.16.0'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
+    testImplementation 'io.rest-assured:rest-assured:5.4.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 }
 
 test {
